[tool.poetry]
name = "electrical-meter-api-simulation"
version = "0.1.0"
description = ""
authors = ["Henry Post <henryfbp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
jsonpickle = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
